--- a/defense.htm
+++ b/defense.htm
@@ -1144,6 +1144,281 @@ investigation by simply accepting the transfer.
    </ul>
   </div>
   <h2>
+   Advances to (1X)-X
+  </h2>
+  <p>
+   Transfer advances are active from 3Q on.  This way, we can separate paths to
+suit games by strength and by length.
+  </p>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1Y)-Dbl
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          1Z
+         </td>
+         <td>
+          NEG, 0&ndash;7 HCP, usually 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          1NT
+         </td>
+         <td>
+          CONST, 8&ndash;10 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2X
+         </td>
+         <td>
+          NEG, 0&ndash;9 HCP, usually 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Y
+         </td>
+         <td>
+          !ART: RESP, INV 4= suit with stopper, or FG
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2Z
+         </td>
+         <td>
+          Mild INV, 8&ndash;12 HCP, 4+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          INV, 11&ndash;12 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3X
+         </td>
+         <td>
+          INV, 10&ndash;12 HCP, 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          !Ask for stopper
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3Y
+         </td>
+         <td>
+          !TRF INV+, 10+ HCP, 5+ next suit
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3Z
+         </td>
+         <td>
+          !TRF INV+, 10+ HCP, 5+ next suit
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1M)-Dbl
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4m
+         </td>
+         <td>
+          !Leaping Michaels, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , usually 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4M
+         </td>
+         <td>
+          !Leaping Michaels, 5+
+          <span class="dcolor">
+           &diams;
+          </span>
+          , 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4oM
+         </td>
+         <td>
+          PRE, usually 7+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          5m
+         </td>
+         <td>
+          PRE, 7+#
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <div class="tree">
+   <ul>
+    <li class="root">
+     (1m)-Dbl
+     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4m
+         </td>
+         <td>
+          !Leaping Michaels, 5+
+          <span class="scolor">
+           &spades;
+          </span>
+          , 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4om
+         </td>
+         <td>
+          !Leaping Michaels, 5+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          , usually 5+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          4M
+         </td>
+         <td>
+          PRE, usually 7+#
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="last node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          5om
+         </td>
+         <td>
+          PRE, 7+#
+         </td>
+        </tr>
+       </table>
+      </li>
+     </ul>
+    </li>
+   </ul>
+  </div>
+  <h2>
    Advances to (1X)-1NT
   </h2>
   <p>
@@ -2567,7 +2842,7 @@ still threat to stop in our natural 2
    </ul>
   </div>
   <p>
-   By passed hand, we play Meckwell DONT as if against a strong notrump.
+   By passed hand, we play the defense against a strong notrump.
   </p>
   <h1>
    Over natural (2X)
@@ -3077,10 +3352,13 @@ contract more often than not.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3Y
+          3
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
          <td>
-          !TRF INV+, 5+ next suit
+          !Ask for stopper, usually a long minor suit
          </td>
         </tr>
        </table>
@@ -3089,7 +3367,7 @@ contract more often than not.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3Z
+          3Y
          </td>
          <td>
           !TRF INV+, 5+ next suit
@@ -3101,13 +3379,10 @@ contract more often than not.
        <table>
         <tr>
          <td class="node" rowspan="1">
-          3
-          <span class="scolor">
-           &spades;
-          </span>
+          3Z
          </td>
          <td>
-          !Ask for stopper, usually a long minor suit
+          !TRF INV+, 5+ next suit
          </td>
         </tr>
        </table>
