--- a/wj.htm
+++ b/wj.htm
@@ -5903,19 +5903,6 @@ fairly naturally.
 to send information.  This avoids an awkward situation Bridge World calls &ldquo;two
 temporizers and zero describers.&rdquo;
   </p>
-  <p>
-   After 1
-   <span class="ccolor">
-    &clubs;
-   </span>
-   -2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   , show your club fit before your major suit!  We still have room to
-find a major fit.  We need to deter opponents from entering the auction. They
-probably have a fit, too.
-  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -5938,9 +5925,9 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          S/T, 18+ HCP, 5+
-          <span class="dcolor">
-           &diams;
+          !S/T (R), 15+ HCP, usually 5+
+          <span class="ccolor">
+           &clubs;
           </span>
          </td>
         </tr>
@@ -5956,7 +5943,7 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          4+
+          S/T, 15+ HCP, 4+
           <span class="hcolor">
            &hearts;
           </span>
@@ -5974,7 +5961,7 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          4+
+          S/T, 15+ HCP, 4+
           <span class="scolor">
            &spades;
           </span>
@@ -5989,7 +5976,7 @@ probably have a fit, too.
           2NT
          </td>
          <td>
-          12&ndash;14 or 18+ HCP
+          Nearly BAL, 12&ndash;14 or 18+ HCP
          </td>
         </tr>
        </table>
@@ -6004,7 +5991,7 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          NAT, 12&ndash;14 HCP, 4+
+          NAT, 12&ndash;14 or 18+ HCP, 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -6022,9 +6009,9 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          !S/T, 15&ndash;17 HCP, 4+
-          <span class="ccolor">
-           &clubs;
+          S/T, 18+ HCP, 6+
+          <span class="dcolor">
+           &diams;
           </span>
          </td>
         </tr>
@@ -6040,11 +6027,7 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          S/T, 18+ HCP, 5=
-          <span class="hcolor">
-           &hearts;
-          </span>
-          or 7+
+          S/T, 18+ HCP, 6+
           <span class="hcolor">
            &hearts;
           </span>
@@ -6062,11 +6045,7 @@ probably have a fit, too.
           </span>
          </td>
          <td>
-          S/T, 18+ HCP, 5=
-          <span class="scolor">
-           &spades;
-          </span>
-          or 7+
+          S/T, 18+ HCP, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -6090,18 +6069,6 @@ probably have a fit, too.
     </li>
    </ul>
   </div>
-  <p>
-   It's another story after 1
-   <span class="ccolor">
-    &clubs;
-   </span>
-   -2
-   <span class="dcolor">
-    &diams;
-   </span>
-   .  Just bid constructively because we have not
-found a fit yet.
-  </p>
   <div class="tree">
    <ul>
     <li class="root">
@@ -6124,7 +6091,7 @@ found a fit yet.
           </span>
          </td>
          <td>
-          4+
+          S/T, 15+ HCP, 4+
           <span class="hcolor">
            &hearts;
           </span>
@@ -6142,7 +6109,7 @@ found a fit yet.
           </span>
          </td>
          <td>
-          4+
+          S/T, 15+ HCP, 4+
           <span class="scolor">
            &spades;
           </span>
@@ -6157,7 +6124,7 @@ found a fit yet.
           2NT
          </td>
          <td>
-          12&ndash;14 or 18+ HCP
+          Nearly BAL, 12&ndash;14 or 18+ HCP
          </td>
         </tr>
        </table>
@@ -6172,7 +6139,7 @@ found a fit yet.
           </span>
          </td>
          <td>
-          S/T, 15&ndash;17 HCP, 6+
+          NAT, 12&ndash;14 or 18+ HCP, 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -6190,7 +6157,7 @@ found a fit yet.
           </span>
          </td>
          <td>
-          S/T, 15&ndash;17 HCP, 4+
+          S/T, 15+ HCP, 5+
           <span class="dcolor">
            &diams;
           </span>
@@ -6208,11 +6175,7 @@ found a fit yet.
           </span>
          </td>
          <td>
-          S/T, 18+ HCP, 5=
-          <span class="hcolor">
-           &hearts;
-          </span>
-          or 7+
+          S/T, 18+ HCP, 6+
           <span class="hcolor">
            &hearts;
           </span>
@@ -6230,11 +6193,7 @@ found a fit yet.
           </span>
          </td>
          <td>
-          S/T, 18+ HCP, 5=
-          <span class="scolor">
-           &spades;
-          </span>
-          or 7+
+          S/T, 18+ HCP, 6+
           <span class="scolor">
            &spades;
           </span>
@@ -6249,7 +6208,10 @@ found a fit yet.
           3NT
          </td>
          <td>
-          S/T, 15&ndash;17 HCP, 4414
+          S/T, 15&ndash;17 HCP, 5+
+          <span class="ccolor">
+           &clubs;
+          </span>
          </td>
         </tr>
        </table>
