--- a/wj.htm
+++ b/wj.htm
@@ -17377,11 +17377,11 @@ unbid (minor) suits.
    </ul>
   </div>
   <p>
-   We often pass 2
+   We frequently pass 2
    <span class="dcolor">
     &diams;
    </span>
-   x with balanced hands to ease slam exploration, especially
+   x with 4+ diamonds to ease slam exploration, especially
 for minor suit slams.
   </p>
   <div class="tree">
@@ -17412,7 +17412,7 @@ for minor suit slams.
           2NT
          </td>
          <td>
-          !INV+ (R)
+          !CONST+ Lebensohl
          </td>
         </tr>
        </table>
@@ -17427,27 +17427,10 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !BAL, 19+ HCP
+            !P/C, 12&ndash;17 HCP, 5+M
            </td>
           </tr>
          </table>
-         <ul>
-          <li class="last node">
-           <table>
-            <tr>
-             <td class="node" rowspan="1">
-              3
-              <span class="dcolor">
-               &diams;
-              </span>
-             </td>
-             <td>
-              !STAY
-             </td>
-            </tr>
-           </table>
-          </li>
-         </ul>
         </li>
         <li class="node">
          <table>
@@ -17459,7 +17442,7 @@ for minor suit slams.
             </span>
            </td>
            <td>
-            !MIN
+            !BAL, 19+ HCP
            </td>
           </tr>
          </table>
@@ -17471,7 +17454,7 @@ for minor suit slams.
             3M
            </td>
            <td>
-            !MAX, 5+#
+            NAT, 18+ HCP, 5+#
            </td>
           </tr>
          </table>
@@ -17488,7 +17471,7 @@ for minor suit slams.
           </span>
          </td>
          <td>
-          To play, usually 6+
+          PRE, usually 5+
           <span class="ccolor">
            &clubs;
           </span>
@@ -17506,13 +17489,72 @@ for minor suit slams.
           </span>
          </td>
          <td>
-          !Ask for stopper, usually 6+
-          <span class="ccolor">
-           &clubs;
-          </span>
+          !INV+ (R), usually tolerance in both majors
          </td>
         </tr>
        </table>
+       <ul>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3M
+           </td>
+           <td>
+            MIN, 5+#
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            3NT
+           </td>
+           <td>
+            BAL, 19+ HCP
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4
+            <span class="ccolor">
+             &clubs;
+            </span>
+           </td>
+           <td>
+            !MAX, 5+
+            <span class="hcolor">
+             &hearts;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+        <li class="last node">
+         <table>
+          <tr>
+           <td class="node" rowspan="1">
+            4
+            <span class="dcolor">
+             &diams;
+            </span>
+           </td>
+           <td>
+            !MAX, 5+
+            <span class="scolor">
+             &spades;
+            </span>
+           </td>
+          </tr>
+         </table>
+        </li>
+       </ul>
       </li>
       <li class="node">
        <table>
@@ -17521,7 +17563,7 @@ for minor suit slams.
           3M
          </td>
          <td>
-          !P/C
+          !INV+ P/C
          </td>
         </tr>
        </table>
@@ -17533,7 +17575,7 @@ for minor suit slams.
           3NT
          </td>
          <td>
-          To play, usually long clubs with a short diamond stopper
+          !P/C, choice of games
          </td>
         </tr>
        </table>
